[gd_scene load_steps=12 format=2]

[ext_resource path="res://DistanceChecks/stuff/WanderAgent.gd" type="Script" id=1]
[ext_resource path="res://DistanceChecks/stuff/BasicDistanceCheck.gd" type="Script" id=2]
[ext_resource path="res://DistanceChecks/stuff/AreaDistanceCheck.gd" type="Script" id=3]
[ext_resource path="res://DistanceChecks/stuff/HashTableDistanceCheck.gd" type="Script" id=4]
[ext_resource path="res://DistanceChecks/stuff/AreaDetectAreasDistanceCheck.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=6]
radius = 0.5

[sub_resource type="CapsuleMesh" id=7]
radius = 0.5

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0.0666667, 0.0666667, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.913725, 0, 1 )

[sub_resource type="SphereShape" id=5]
radius = 3.0

[sub_resource type="SphereShape" id=9]
radius = 0.1

[node name="WanderAgent" type="KinematicBody" groups=[
"wander_agents",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 6 )

[node name="BasicDistanceCheck" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Red" type="MeshInstance" parent="BasicDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Yellow" type="MeshInstance" parent="BasicDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="AreaDistanceCheck" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="Red" type="MeshInstance" parent="AreaDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Yellow" type="MeshInstance" parent="AreaDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDistanceCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 5 )

[node name="AreaDetectAreasDistanceCheck" type="Area" parent="."]
gravity_vec = Vector3( 0, 0, 0 )
monitorable = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 5 )

[node name="Red" type="MeshInstance" parent="AreaDetectAreasDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Yellow" type="MeshInstance" parent="AreaDetectAreasDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDetectAreasDistanceCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 5 )

[node name="Detectable" type="Area" parent="AreaDetectAreasDistanceCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
gravity_vec = Vector3( 0, 0, 0 )
monitoring = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="AreaDetectAreasDistanceCheck/Detectable"]
shape = SubResource( 9 )

[node name="HashTableDistanceCheck" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Red" type="MeshInstance" parent="HashTableDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Yellow" type="MeshInstance" parent="HashTableDistanceCheck"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 4 )
